Add codebase of version 1.22

--- a/menu/cmdlists/other.cfg
+++ b/menu/cmdlists/other.cfg
@@ -12,8 +12,7 @@ globalwidgetcommand admincmdslist additem "help" "reset rconfield ; wait 250; ap
 
 globalwidgetcommand admincmdslist additem "teamwin allies" "rcon admin_cmd `teamwin_allies"
 globalwidgetcommand admincmdslist additem "teamwin axis" "rcon admin_cmd `teamwin_axis"
-globalwidgetcommand admincmdslist additem "Reset on" "rcon admin_cmd `reset_1"
-globalwidgetcommand admincmdslist additem "Reset off" "rcon admin_cmd `reset_0"
+globalwidgetcommand admincmdslist additem "Reset AP" "rcon admin_cmd `reset_reset"
 
 globalwidgetcommand admincmdslist additem "dmrespawning on" "rcon admin_cmd `dmrespawning_1"
 globalwidgetcommand admincmdslist additem "dmrespawning off" "rcon admin_cmd `dmrespawning_0"
