--- a/menu/cmdlists/player_extra.cfg
+++ b/menu/cmdlists/player_extra.cfg
@@ -44,6 +44,12 @@ globalwidgetcommand admincmdslist additem "damage" "append rconfield damage"
 globalwidgetcommand admincmdslist additem "velocity" "append rconfield damage"
 globalwidgetcommand admincmdslist additem "iprintbold" "append rconfield iprintbold "
 globalwidgetcommand admincmdslist additem "Scale" "append rconfield scale "
+globalwidgetcommand admincmdslist additem "hurt" "append rconfield hurt "
+globalwidgetcommand admincmdslist additem "health" "append rconfield health "
+globalwidgetcommand admincmdslist additem "jump" "append rconfield jump "
+globalwidgetcommand admincmdslist additem "light" "append rconfield light "
+
+
 
 
 
