--- a/menu/cmdlists/player.cfg
+++ b/menu/cmdlists/player.cfg
@@ -22,6 +22,9 @@ globalwidgetcommand admincmdslist additem "tweakladderpos" "exec menu/playersele
 globalwidgetcommand admincmdslist additem "mini_plane" "exec menu/playerselection/mini_plane.cfg; pushmenu camper_playerselect"
 globalwidgetcommand admincmdslist additem "plane" "exec menu/playerselection/plane.cfg; pushmenu camper_playerselect"
 globalwidgetcommand admincmdslist additem "say" "pushmenu camper_say; globalwidgetcommand lstphrases hide"
+globalwidgetcommand admincmdslist additem "jetpack" "exec menu/playerselection/jetpack.cfg; pushmenu camper_playerselect"
+
+
 
 globalwidgetcommand admincmdslist additem "soundpicker" "exec menu/playerselection/soundpicker.cfg; pushmenu camper_playerselect"
 globalwidgetcommand admincmdslist additem "stopmp3" "exec menu/playerselection/stopmp3.cfg; pushmenu camper_playerselect"
